gitops/apps/dashy/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dashy
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: dashy
